--- a/index.html
+++ b/index.html
@@ -9,21 +9,8 @@
     <title>PhotoStudio</title>
   </head>
   <body>
-    <header class="header">
-      <div class="conteiner">
-        <p>это heder</p>
-      </div>
-    </header>
-    <main class="main">
-      <div class="conteiner">
-        <p>это body</p>
-      </div>
-    </main>
-    <footer class="footer">
-      <div class="conteiner">
-        <p>это footer</p>
-      </div>
-    </footer>
-    <script src="./js/index.js" type="module"></script>
+    <a href="./portfolio.html" class="nvg-list__link link">Портофолио</a>
+
+    <!-- <script src="./js/index.js" type="module"></script> -->
   </body>
 </html>
